Changes to enable the changes to the story browser UI.
