# storyengine/api/service.py
@@ -116,36 +116,16 @@ def get_topics(topic_map_identifier, instance_of='topic', offset=0, limit=100):
 def get_topics_hierarchy(topic_map_identifier, identifier):
 
     def build_topics_hierarchy(inner_identifier):
-        # JSON data structure suitable for the RGraph visualization from the
-        # JavaScript InfoViz Toolkit (https://philogb.github.io/jit/)
 
         parent_identifier = tree[inner_identifier].parent
         base_name = tree[inner_identifier].topic.first_base_name.name
         instance_of = tree[inner_identifier].topic.instance_of
         children = tree[inner_identifier].children
 
-        if instance_of == 'scene':
-            node_data = {
-                '$color': '#00ff00'
-            }
-        elif instance_of == 'character':
-            node_data = {
-                '$color': '#ff0000'
-            }
-        elif instance_of == 'prop':
-            node_data = {
-                '$color': '#0000ff'
-            }
-        else:
-            node_data = {
-                '$color': '#a6a6a6'
-            }
-
         node = {
             'id': inner_identifier,
             'name': base_name,
             'instanceOf': instance_of,
-            'data': node_data,
             'children': []
         }
         result[inner_identifier] = node
@@ -164,6 +144,46 @@ def get_topics_hierarchy(topic_map_identifier, identifier):
         result = {}
         build_topics_hierarchy(identifier)
         return result[identifier], 200
+    else:
+        return "Not found", 404
+
+
+def get_network(topic_map_identifier, identifier):
+
+    def build_network(inner_identifier):
+        base_name = tree[inner_identifier].topic.first_base_name.name
+        instance_of = tree[inner_identifier].topic.instance_of
+        children = tree[inner_identifier].children
+
+        group = instance_of
+        if inner_identifier == identifier:
+            group = 'active'
+        node = {
+            'id': inner_identifier,
+            'label': base_name,
+            'group': group,
+            'instanceOf': instance_of
+        }
+
+        if instance_of in ('scene', 'character', 'prop'):
+            result[nodes].append(node)
+
+        for child in children:
+            edge = {
+                'from': inner_identifier,
+                'to': child
+            }
+            if instance_of == 'scene':
+                result[edges].append(edge)
+            build_network(child)  # Recursive call.
+
+    tree = store.get_topics_hierarchy(topic_map_identifier, identifier)
+    if len(tree) > 1:
+        nodes = 0
+        edges = 1
+        result = ([], [])  # The result is a tuple containing two lists of dictionaries.
+        build_network(identifier)
+        return result, 200
     else:
         return "Not found", 404
 
